fixed spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -376,7 +376,7 @@ h4 {
 
 .footer-content {
   width: 1160px;
-  height: 1430px;
+  height: 1230px;
   margin: 0 auto;
 }
 
